--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <li><a href="#location">Locations</a></li>
        <li><a href="#prices">Prices</a></li>
        <li><a href="#bookings">Bookings</a></li>
-       <li><a href="about.html">About Us</a></li>
+       <li><a href="html/about.html">About Us</a></li>
     </ul>
    </div>
 </nav>
@@ -182,7 +182,7 @@
 				<li class="footer-link"><a href="#location">Locations</a></li>
 				<li class="footer-link"><a href="#prices">Prices</a></li>
 				<li class="footer-link"><a href="#bookings">Bookings</a></li>
-				<li class="footer-link"><a href="about.html">About Us</a></li>
+				<li class="footer-link"><a href="html/about.html">About Us</a></li>
 			</ul>
 
 
